--- a/charts/helm-mysql/values.yaml
+++ b/charts/helm-mysql/values.yaml
@@ -99,7 +99,7 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: "nas-thin"
+  # storageClass: ""
   accessMode: ReadWriteOnce
   size: 8Gi
   annotations: {}
