--- a/react-netgrid/nginx-netgrid.conf
+++ b/react-netgrid/nginx-netgrid.conf
@@ -2,6 +2,7 @@ server {
   root /storage/netgrid;
   index index.html index.htm;
   server_name netgrid.example.com;
+  listen 8888;
 
   location / {
     try_files $uri $uri/ =404;
