--- a/react-netgrid/package.json
+++ b/react-netgrid/package.json
@@ -14,10 +14,18 @@
     "react-scripts": "3.4.3",
     "react-toastify": "^6.0.8"
   },
+  "devDependencies": {
+    "json-server": "^0.16.1",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "npm-run-all": "4.1.5"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "run-p start:dev start:api",
+    "start:dev": "react-scripts start",
+    "prestart:api": "node tools/createMockDb.js",
+    "start:api": "node tools/apiServer.js",
     "test": "react-scripts test",
+    "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -33,6 +41,17 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/tools/styleMock.js"
+    }
+  },
+  "babel": {
+    "presets": [
+      "babel-preset-react-app"
     ]
   }
 }
