--- a/java-app-models/build.gradle
+++ b/java-app-models/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.5'
     implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
 
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.0.1.Final'
+    compile group: 'org.springframework', name: 'spring-orm', version: '4.0.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.0.2.RELEASE'
+
     testCompile group: 'org.springframework', name: 'spring-test', version: '4.0.5.RELEASE'
     testCompile "junit:junit:4.12"
     testCompile 'org.mockito:mockito-core:2.15.0'
