--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     }
     // implementation files('../java-app-models/build/libs/java-app-models-0.1.0-SNAPSHOT.jar')
 
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.0.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.0.2.RELEASE'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'mysql:mysql-connector-java'
