--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.0.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.0.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-core', version: '4.0.2.RELEASE'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web'
