--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -44,12 +44,12 @@ dependencies {
     }
     // implementation files('../java-app-models/build/libs/java-app-models-0.1.0-SNAPSHOT.jar')
 
-    compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.0.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.0.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-core', version: '4.0.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.6.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.6.RELEASE'
 
+    implementation 'org.springframework.boot:spring-boot-starter-parent:2.0.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.5.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.0.5.RELEASE'
     runtimeOnly 'mysql:mysql-connector-java'
     implementation 'org.slf4j:slf4j-api:1.7.5'
     implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
