--- a/react-netgrid/nginx-netgrid.conf
+++ b/react-netgrid/nginx-netgrid.conf
@@ -18,7 +18,7 @@ server {
   ssl_prefer_server_ciphers off;
 
   location / {
-    try_files $uri $uri/ =404;
+    try_files $uri $uri/ /index.html;
   }
   error_page 404 /404.html;
 
