--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     }
     // implementation files('../java-app-models/build/libs/java-app-models-0.1.0-SNAPSHOT.jar')
 
+    compile group: 'com.auth0', name: 'java-jwt', version: '3.10.3'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.6.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.6.RELEASE'
 
