uses slick trick to make development possible on react stuff during docker-compose runs :)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - "3001:3001"
     depends_on:
       - "java"
+    volumes:
+      - ./react-netgrid:/app
 
   java:
     build: ./
