--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -24,7 +24,7 @@ def actual_suffix = snapshot_suffix ? "-${snapshot_suffix}" : ""
 version = "${version}${actual_suffix}"
 group = "${project.artifact_groupId}"
 
-apply plugin: 'application'
+// apply plugin: 'application' // this... stopped working for `gradle install` at some point.....
 apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'maven'
@@ -33,7 +33,15 @@ apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-mainClassName='org.njax.trinetco.netgrid.java.api.Main'
+def mainClassName = 'org.njax.trinetco.netgrid.java.api.Main'
+
+// enables automatic app restarting based on class changes
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
 
 dependencies {
     if (false) {
@@ -42,7 +50,10 @@ dependencies {
     else {
       compile project(":javaAppModels")
     }
-    // implementation files('../java-app-models/build/libs/java-app-models-0.1.0-SNAPSHOT.jar')
+    // implementation files('../java-app-models/build/libs/java-app-models-0.1.2-SNAPSHOT.jar')
+
+    implementation 'org.springframework.boot:spring-boot-starter'    // enables automatic app restarting based on class changes
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     compile group: 'com.auth0', name: 'java-jwt', version: '3.10.3'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.6.RELEASE'
@@ -61,70 +72,72 @@ repositories {
     mavenCentral()
     mavenLocal()
 
-    maven {
-        url "${artifactory_contextUrl}/repo"
-        credentials {
-            username = "${artifactory_user}"
-            password = "${artifactory_password}"
-        }
-    }
+   maven {
+       url "${artifactory_contextUrl}/repo"
+       credentials {
+           username = "${artifactory_user}"
+           password = "${artifactory_password}"
+       }
+   }
 }
 
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-            version project.version
-            groupId project.group
-        }
-    }
+   publications {
+       mavenJava(MavenPublication) {
+           from components.java
+           version project.version
+           groupId project.group
+       }
+   }
 }
 
 
 artifactory {
-    contextUrl = "${artifactory_contextUrl}"
+   contextUrl = "${artifactory_contextUrl}"
 
-    resolve {
-        repository {
-            repoKey = 'repo'
-            maven = true
-        }
-    }
+   resolve {
+       repository {
+           repoKey = 'repo'
+           maven = true
+       }
+   }
 
-    publish {
-        repository {
-            repoKey = snapshot_suffix.toUpperCase() == "SNAPSHOT" ? snapshot_repokey:  release_repokey
-            username = "${artifactory_user}"   // The publisher user name
-            password = "${artifactory_password}" // The publisher password
-            maven = true
-        }
-        defaults {
-            publications('mavenJava')
-        }
-    }
+   publish {
+       repository {
+           repoKey = snapshot_suffix.toUpperCase() == "SNAPSHOT" ? snapshot_repokey:  release_repokey
+           username = "${artifactory_user}"   // The publisher user name
+           password = "${artifactory_password}" // The publisher password
+           maven = true
+       }
+       defaults {
+           publications('mavenJava')
+       }
+   }
 }
 
 
 // Enable Reproducible Spring Boot Builds //
 tasks.withType(AbstractArchiveTask) {
-    preserveFileTimestamps = false
-    reproducibleFileOrder = true
+   preserveFileTimestamps = false
+   reproducibleFileOrder = true
 }
 springBoot {
-    mainClassName = mainClassName
-    buildInfo {
-        properties {
-             time = null
-        }
+   mainClassName = mainClassName
+   buildInfo {
+       properties {
+            time = null
+       }
 
-        doLast {
-            File f = new File(destinationDir, 'build-info.properties')
-            f.text = f.filterLine { !it.startsWith('#') }
-        }
-    }
+       doLast {
+           File f = new File(destinationDir, 'build-info.properties')
+           f.text = f.filterLine { !it.startsWith('#') }
+       }
+   }
 }
+jar     { archiveName 'app.jar' }
 bootJar { archiveName 'app.jar' }
 
+install { dependsOn ":build" } // I have to do this since I can't use the application plugin which does this for me...
 
 class Version {
     String major, minor, revision
