--- a/java-app-models/build.gradle
+++ b/java-app-models/build.gradle
@@ -63,6 +63,7 @@ dependencies {
   compile group: 'org.springframework', name: 'spring-orm', version: '4.0.2.RELEASE'
   compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.0.2.RELEASE'
 
+  testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
   testCompile group: 'org.springframework', name: 'spring-test', version: '4.0.5.RELEASE'
   testCompile "junit:junit:4.12"
   testCompile 'org.mockito:mockito-core:2.15.0'
